--- a/projeto_07/public_html/css/style.css
+++ b/projeto_07/public_html/css/style.css
@@ -1,5 +1,4 @@
 
-
 nav ul a,
 nav .brand-logo {
   color: white;
@@ -18,4 +17,30 @@ nav .brand-logo {
   background: white;
   padding: 15px 2%;
   max-width: 700px;
+  width: 100%;
+}
+
+.custom-title {
+  position: relative;
+}
+
+.custom-title h2 {
+  font-size: 30px;
+  color: #777;
+  z-index: 2;
+  position: relative;
+  display: inline-block;
+  background: white;
+  padding-right: 10px;
+  margin-top: 29px;
+}
+
+.custom-title > div {
+  width: 100%;
+  position: absolute;
+  height: 3px;
+  top: 40px;
+  z-index: 1;
+  background: #777;
+  left: 0;
 }
